# zenoh-perf

./: Cargo.toml
comparison/cyclonedds/: .gitignore  Makefile  cyclonedds.xml
comparison/cyclonedds/latency/: CMakeLists.txt  ping.c  pong.c
comparison/cyclonedds/throughput/: CMakeLists.txt  Throughput.idl  publisher.c  subscriber.c
comparison/kafka/: Cargo.toml  Makefile  README.md  rust-toolchain.toml
comparison/kafka/scripts/: clean_kafka.sh  install-kafka.sh  run_kafka_cluster.sh  run_kafka_single.sh  run_latency.sh  run_many_latency.sh  run_many_throughput.sh  run_throughput.sh
comparison/kafka/scripts/files/: .gitignore
comparison/kafka/scripts/files/config-cluster/: server.properties  zookeeper.properties
comparison/kafka/scripts/files/config-single/: server.properties  zookeeper.properties
comparison/kafka/src/: lib.rs
comparison/kafka/src/kafka_ping/: main.rs  opts.rs
comparison/kafka/src/kafka_pong/: main.rs  opts.rs
comparison/kafka/src/kafka_pub_thr/: main.rs  opts.rs
comparison/kafka/src/kafka_sub_thr/: main.rs  opts.rs
comparison/mqtt/: .gitignore  Makefile  README.md  mosquitto.conf
comparison/mqtt/latency/: mqtt_ping.c  mqtt_pong.c
comparison/mqtt/scripts/: clean_mosquitto_docker.sh  install-mosquitto.sh  install-paho.mqtt.c.sh  run_mosquitto.sh  run_mosquitto_docker.sh  set-vars.sh
comparison/mqtt/throughput/: mqtt_pub_thr.c  mqtt_sub_thr.c
comparison/zenoh/: .gitignore  Cargo.toml  Makefile
latency/: Cargo.toml
overhead/: Cargo.toml
query/: Cargo.toml
throughput/: Cargo.toml
