#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]

members = [
  "throughput",
  "latency",
  "query",
  "overhead",
  "comparison/kafka",
  "comparison/zenoh"
]

[profile.release]
debug=false
lto="fat"
codegen-units=1
opt-level=3
panic="abort"

[patch.crates-io]
zenoh                = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-util           = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-core           = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-cfg-properties = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-protocol       = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-buffers        = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-config         = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-link           = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-transport      = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
